# BOT-AI-LLM-2

./: .env.example  .gitignore  ARCHITECTURE.md  BACKTESTING_RESULTS.md  COMPLETE_SYSTEM_README.md  Dockerfile  EXPECTED_RESULTS_DOCUMENT.md  PIPELINE_DOCUMENT.md  README.md  VALIDATION_RESULTS.txt  VERIFICATION_REPORT.md  WORKFLOW_DOCUMENT.md  alternative_data.db  app.py  docker-compose.yml  launch.py  launch_pipeline.py  launch_quantum_core.py  pyproject.toml  quantum_forge_data.db  quantum_forge_historical.db  requirements.txt  run_backtest.py  run_backtest_full.py  run_backtest_ml_fusion.py  run_full_system.py
config/: binance_config.yaml  system.yaml
core/: advanced_ml.py  alert_system.py  alpha_bridge.py  alpha_crowding_detector.py  alt_data_alpha.py  analytics.py  audit.py  capital_allocator.py  causal_bridge.py  config_manager.py  cross_asset_alpha.py  dynamic_portfolio_tracker.py  execution_manager.py  feature_pipeline.py  financial_llm_finetuner.py  gp_bridge.py  health_monitor.py  llm_enhanced.py  llm_structured_output.py  market_impact_tracker.py  meta_learning_bridge.py  metrics_server.py  ml_ensemble.py  mpc_hedging_bridge.py  optimal_stopping_bridge.py  order_book_analyzer.py  pipeline.py  quantum_core.py  queue_position_estimator.py  r_integration_bridge.py  real_backtester.py  regime_detector.py  replay_engine.py  shadow_tracker.py  signal_generator.py  spoofing_detector.py  state_persistence.py  storage_coordinator.py  strategy_interface.py  strategy_multiplexer.py  (+2 more)
data/: backtest_full_cost_results.json  backtest_ml_fusion_real_data.json  backtest_results.json  historical_collector.py  ml_output.txt
docs/: ADR.md  API_REFERENCE.md
intelligence/: training_pipeline.py
llm_integration/: README.md  __init__.py  api.py  bridge.py  duckdb_cache.py  event_stream.py  explanation_contracts.py  llm_engine.py  setup.py  vector_store.py
notebooks/: 01_mathematical_foundations.ipynb  02_signal_processing.ipynb  03_ml_models_comparison.ipynb  04_backtesting_framework.ipynb  05_factor_research.ipynb  06_execution_analysis.ipynb  07_risk_management.ipynb  08_regime_detection.ipynb  09_safe_research_acceleration.ipynb  README.md
pages/: 10_🏛️_Investor_Portal.py  1_📊_Main_Dashboard.py  2_📈_Trading_Dashboard.py  3_🛡️_Risk_Dashboard.py  4_💼_Portfolio_Dashboard.py  README.md  (+5 more)
(+183 files in other folders)
